[package]
name = "micro_cosmos"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }

rand = "^0.8"
rand_chacha = "^0.3"
rand_distr = "^0.4"
fastrand = "^1.8"

rayon = "^1.6"

rusty_neat = {path = "../rusty_neat"}
bevy = { version = "^0.9", features = ["dynamic"]}  # delete in release
bevy_rapier2d = { version = "^0.20", features = ["parallel", "serde-serialize"]}
bevy_egui = "^0.19"
bevy_pixel_camera = "^0.3"
simplesvg = "^0.4"
nsvg = "^0.5"

#bevy_flycam = "*"

#nalgebra = { version = "^0.32.1", features = ["serde-serialize"]}
#ndarray = { version = "^0.15.6", features = ["rayon", "serde", "matrixmultiply-threading"]}
#ndarray-rand = "^0.14.0"
